# edcas-client

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.eddn  Dockerfile.tickweb  Dockerfile.web  LICENSE  PKGBUILD  README.md  build.rs  control  create-linux-release.sh  create-windows-release.bat  docker-compose.yml  edcas.desktop  engineers.json  input.css  materials.json  modifications.json  settings-example.json  start.bat  start.sh  tailwind.css
.github/workflows/: ci.yml  release.yml
assets/: logo_to_rust.py  tailwind.css
assets/styling/: main.css
contracts/: EDCAS.abi
crates/edcas-common/: Cargo.toml
crates/edcas-common/src/: api.rs  lib.rs
crates/edcas-common/src/journal/: colonisation.rs  mod.rs  scan.rs  station.rs  travel.rs  types.rs
crates/edcas-eddn/: Cargo.toml
crates/edcas-eddn/src/: config.rs  listener.rs  main.rs
crates/edcas-eddn/src/api/: carriers.rs  (+3 more)
crates/edcas-server/: Cargo.toml  README.md  schema.sql
crates/edcas-server/migrations/: 20260528_drop_lookup_tables.sql  20260603_add_history_tables.sql  20260603_add_population_history.sql  20260603_history_unique_constraints.sql  README.md
crates/edcas-server/src/: cache.rs  listener.rs  main.rs  migrations.rs  request_logger.rs  stats.rs  tick.rs
crates/edcas-server/src/api/: carriers.rs  construction.rs  factions.rs  journal.rs  mod.rs  nearest_commodity.rs  stations.rs  systems.rs  tick.rs  trade_routes.rs
crates/edcas-server/src/db/: construction.rs  mod.rs  scan.rs  station.rs  tables.rs  travel.rs
edservertick/: app.js  index.html  nginx-host.conf  nginx.conf  robots.txt  sitemap.xml  style.css
scripts/: create-eddn-docker-image.sh  run.sh  run_tailwind.sh
src/: api_client.rs  app.rs  cli.rs  edcas.rs  eddn.rs  engineering_data.rs  event_shim.rs  gui.rs  journal_reader.rs  lib.rs  main.rs  my_carriers.rs  pins.rs  settings.rs  theme.rs  todo.rs  tui.rs  wasm_backend.rs  web.rs
src/app/: about.rs  cargo_reader.rs  carrier.rs  evm_interpreter.rs  evm_updater.rs  explorer.rs  inventory.rs  journal_interpreter.rs  journal_reader.rs  materials.rs  mining.rs  news.rs  settings.rs  simple_transaction.rs  station.rs  tangle_interpreter.rs
src/app/evm_interpreter/: edcas_contract.rs
src/app/explorer/: belt_cluster.rs  body.rs  icons.rs  planet.rs  ring.rs  star.rs  structs.rs  system.rs
src/app/settings/: presets.rs
src/desktop/: settings.rs
src/desktop/settings/: appearance.rs  explorer.rs  grapic_editor.rs  icons.rs  journal_reader.rs
src/edcas/: about.rs  backend.rs  carrier.rs  event.rs  explorer.rs  faction.rs  materials.rs  mining.rs  mod.rs  news.rs  settings.rs  star_system.rs  station.rs  tables.rs
src/edcas/assets/: body.rs  faction.rs  mod.rs  star.rs  star_system.rs  station.rs
src/edcas/backend/: cargo_reader.rs  edcas_contract.rs  evm.rs  evm_interpreter.rs  evm_updater.rs  floating.rs  journal_interpreter.rs  journal_reader.rs  translator.rs
src/edcas/event/: carrierjump.json  carrierjump.rs  carrierjump2.json  commodities.rs  docked.json  docked.rs  fsdjump.json  fsdjump.rs  fsdjump1.json  fssbodysignals.json  fssbodysignals.rs  location.json  location.rs  location_docked.json  location_onfoot.json  location_onfoot2.json  modules.json  modules.rs  saasignalsfound.json  saasignalsfound.rs  scan.rs  scan_auto.json  scan_basic.json  scan_body.json  scan_navbeacondetail.json  scan_star.json  scanbarycentre.json  ships.json  ships.rs
src/edcas/explorer/: belt_cluster.rs  body.rs  planet.rs  ring.rs  star.rs  system.rs
src/eddn/: adapter.rs  edcas_error.rs  eddn_adapter.rs  faction.rs  interpreter.rs  listener.rs  mod.rs  parser.rs  schema.sql  star_system.rs
src/gui/: about.rs  body.rs  carrier.rs  explorer.rs  materials.rs  mining.rs  news.rs  settings.rs  station.rs
src/settings/: appearance.rs  explorer.rs  grapic_editor.rs  icons.rs  journal_reader.rs
src/tui/: about.rs  dockables.rs  explorer.rs  materials.rs  mining.rs
src/views/: about.rs  carriers.rs  commander.rs  construction.rs  engineers.rs  event.rs  explorer.rs  factions.rs  home.rs  inventory.rs  log.rs  logo_lines.rs  materials.rs  mining.rs  mod.rs  modules.rs  navbar.rs  news.rs  pilot.rs  search_nearest.rs  settings.rs  stations.rs  suit.rs  system.rs  todo_view.rs  trade_routes.rs  util.rs  workshop.rs
web/: build.sh  index.html
(+10 files in other folders)
