[package]
name = "edcas-client"
version = "0.4.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/arne-fuchs/edcas-client"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.145"
chrono = "0.4.42"
bus = "2.4.1"
reqwest = { version = "0.12.23", features = ["blocking"] }
select = "0.6.1"
num-format = "0.4.4"
opener = "0.7.2"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Eddn
zmq = {version="0.10.0", optional=true}
flate2 = { version = "1.1.2", features = ["zlib-ng"], default-features = false, optional=true }
postgres = {version = "0.19.11", features = ["with-chrono-0_4","with-serde_json-1"], optional=true}
postgres-types = {version = "0.2.10", features = ["derive"], optional=true}
log = {version="0.4.28", optional=true}
fern = {version="0.7.1", optional=true}

[features]
default = ["eddn"]
eddn = ["zmq","flate2","postgres","postgres-types","log","fern"]
