[workspace]
members = [
    ".",
    "crates/edcas-common",
    "crates/edcas-eddn",
]
resolver = "2"

[package]
name = "edcas-client"
version = "0.4.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/arne-fuchs/edcas-client"

[dependencies]
edcas-common = { path = "crates/edcas-common" }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
select = "0.6.1"
num-format = "0.4.4"
opener = "0.7.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
anyhow = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"
