[workspace]
members = [
    ".",
    "crates/edcas-common",
    "crates/edcas-server",
]
resolver = "2"

[package]
name = "edcas-client"
version = "0.4.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/arne-fuchs/edcas-client"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
edcas-common = { path = "crates/edcas-common" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
select = "0.6.1"
num-format = "0.4.4"
tracing = "0.1"
anyhow = "1.0"

bitflags = "2"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui    = { version = "0.29", features = ["crossterm"] }
crossterm  = "0.28"
tokio      = { version = "1.47.1", features = ["full"] }
reqwest    = { version = "0.12.23", features = ["blocking", "json"] }
opener     = "0.7.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"
arboard    = "3"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
ratatui               = { version = "0.29", default-features = false }
reqwest               = { version = "0.12.23", default-features = false, features = ["json"] }
wasm-bindgen          = "0.2"
wasm-bindgen-futures  = "0.4"
js-sys                = "0.3"
web-sys               = { version = "0.3", features = [
    "Window", "Storage", "console",
] }
console_error_panic_hook = "0.1"
getrandom             = { version = "0.2", features = ["js"] }
