[package]
name = "edcas-server"
version = "0.1.0"
edition = "2021"
description = "EDDN listener, database ingestion and REST API for edcas"

[[bin]]
name = "edcas-server"
path = "src/main.rs"

[dependencies]
edcas-common = { path = "../edcas-common" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Database (async postgres)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14" }
postgres-types = { version = "0.2", features = ["derive"] }

# HTTP API
rocket = { version = "0.5", features = ["json"] }

# EDDN (ZMQ + zlib)
zmq = "0.10"
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"
